--- a/src/app/components/vista-ordenes/add-orden/add-orden.component.css
+++ b/src/app/components/vista-ordenes/add-orden/add-orden.component.css
@@ -56,3 +56,8 @@ select:hover{
   border-radius: 10px;
   border: 1px solid #ced4da;
 }
+.icon{
+  width: 60%;
+  min-width: 16px;
+  max-width: 20px;
+}
