--- a/src/app/components/vista-ordenes/vista-ordenes.component.html
+++ b/src/app/components/vista-ordenes/vista-ordenes.component.html
@@ -9,23 +9,6 @@
       No tiene ordenes realizadas
     </div>
 
-    <!--TABLA DE ÓRDENES-->
-    <!--<div class="form-row" *ngIf="ordenes?.length > 0">
-        <div class="col">
-            <input type="text" class="form-control form-control-sm" id="numeracion" placeholder="Numeración">
-        </div>
-
-        <div class="col">
-            <select class="form-control form-control-sm">
-              <option selected>Seleccione Estado</option>
-              <option value="aceptadas">Aceptadas</option>
-              <option value="pendientes">Pendientes</option>
-              <option value="canceladas">Canceladas</option>
-              <option value="devueltas">Devueltas</option>
-            </select>
-        </div>
-    </div>-->
-
     <p></p>
     <table class="table text-center" id="tablaOrdenes" *ngIf="ordenes?.length > 0">
       <thead class="thead-dark">
@@ -40,9 +23,6 @@
         </tr>
       </thead>
       <tbody>
-        <!--<tr *ngFor="let orden of ordenes">
-          <td>{{orden.estado}}</td>
-          <td>{{orden.numeracion}}</td>-->
           <tr *ngFor="let a of elementos[0]">
             <td>{{ordenes[getOrdenPagindoIndex(a,   paginaActual)].fechaOrden | date:'dd-MM-yyyy'}}</td>
             <td>
@@ -55,7 +35,8 @@
             <td>{{ordenes[getOrdenPagindoIndex(a,   paginaActual)].acronimo}}</td>
             <td>
               <img src="assets/iconos/lupa.png" class="rounded icon" alt="Editar Orden" [routerLink]="['/vistaOrdenes/verOrden/', ordenes[getOrdenPagindoIndex(a,   paginaActual)].id]" >
-              <img src="assets/iconos/lupa.png" class="rounded icon" alt="Editar Orden" [routerLink]="['/vistaOrdenes/verOrden/', ordenes[getOrdenPagindoIndex(a,   paginaActual)].id]" >
+              <!--Revisar enlace a editar orden-->
+              <img *ngIf="ordenes[getOrdenPagindoIndex(a, paginaActual)].estado =='PM'" src="assets/iconos/lupa.png" class="rounded icon" alt="Editar Orden" [routerLink]="['/vistaOrdenes/verOrden/', ordenes[getOrdenPagindoIndex(a,   paginaActual)].id]" >
             </td>
             <td>
                 <img src="assets/iconos/papelera.png" class="rounded" alt="Eliminar Orden" (click)="borrarOrden(ordenes[getOrdenPagindoIndex(a,   paginaActual)])">
