IMPRIMIR PDF FUNCIONAgit add .git add .

--- a/src/app/components/vista-ordenes/ver-orden/ver-orden.component.html
+++ b/src/app/components/vista-ordenes/ver-orden/ver-orden.component.html
@@ -279,7 +279,7 @@
   <button (click)="generarPDF()"> GENERAR PDF</button>
   <button *ngIf="orden.estado == 'A'" class="ml-2" (click)="verPDF()"> Ver PDF</button>
 
-  <!--<button class="ml-2" (click)="probarRutas()"> Probar Rutas PDF</button> -->
+  <button class="ml-2" (click)="mostrarPDF()"> Probar Rutas PDF</button>
 
 
 </div>
