--- a/src/app/components/vista-ordenes/add-orden/add-orden.component.html
+++ b/src/app/components/vista-ordenes/add-orden/add-orden.component.html
@@ -11,7 +11,7 @@
 
       <div class="form-row mt-3">
 
-     
+
         <!--FECHA PRUEBAS-->
 
         <div class="form-group col-md-6">
@@ -29,8 +29,8 @@
             <option value="" selected>Seleccione acreedor</option>
             <option *ngFor="let acreedor of acreedores" value="{{ acreedor.nif }}">{{acreedor.nombre}} -- {{ acreedor.nif }}</option>
           </select>
-          <small *ngIf="!ibanRegistrado" class="alerta">No estás registrado como acreedor. Registraté si quieres ser el acreedor de la orden </small> 
-        
+          <small *ngIf="!ibanRegistrado" class="alerta">No estás registrado como acreedor. Registraté si quieres ser el acreedor de la orden </small>
+
         </div>
 
       </div>
@@ -40,13 +40,13 @@
           <div class="form-group col-md-6">
             <label class="texto-form">Concepto</label>
             <input type="text" class="form-control" formControlName="concepto" name="concepto" id="concepto" placeholder="Concepto" maxlength="50"   >
-            <small *ngIf="!crear &&formOrden.get('concepto').hasError('required')" class="alerta">No puede estar vacio. </small>       
+            <small *ngIf="!crear &&formOrden.get('concepto').hasError('required')" class="alerta">No puede estar vacio. </small>
           </div>
 
           <div class="form-group col-md-6">
             <label class="texto-form">Num. Contabilidad</label>
             <input type="text" class="form-control" formControlName="num_contabilidad" name="num_contabilidad" id="num_contabilidad" placeholder="Num. Contabilidad" maxlength="12" >
-            <small *ngIf="!crear &&formOrden.get('num_contabilidad').hasError('required')" class="alerta">No puede estar vacio. </small>       
+            <small *ngIf="!crear &&formOrden.get('num_contabilidad').hasError('required')" class="alerta">No puede estar vacio. </small>
           </div>
 
         </div>
@@ -107,10 +107,10 @@
 
          <!--Ver foto gasto-->
               <td>
-                  <img src="assets/iconos/lupa.png" class="rounded icon" alt="ver foto" (click)='verFoto(gasto.foto)'>
+                  <img src="assets/iconos/lupa.png" class="rounded icon" alt="ver foto" (click)='verFoto(g.foto)'>
               </td>
               <td>
-                <img class="rounded icon" src="assets/iconos/papelera.png" class="rounded icon" alt="Eliminar gasto" (click)='eliminarGasto(gasto)'>
+                <img class="rounded icon" src="assets/iconos/papelera.png" class="rounded icon" alt="Eliminar gasto" (click)='delete(g)'>
               </td>
             </tr>
           </tbody>
@@ -121,21 +121,21 @@
       <div class="form-group">
         <label class="texto-form" for="memoria">Memoria explicativa de los gastos</label>
         <textarea class="form-control" id="memoria" rows="3" formControlName="memoria" placeholder="Escribe la memoria explicativa"  maxlength="150" ></textarea>
-        <small *ngIf="!crear &&formOrden.get('memoria').hasError('required')" class="alerta">No puede estar vacio. </small>    
+        <small *ngIf="!crear &&formOrden.get('memoria').hasError('required')" class="alerta">No puede estar vacio. </small>
       </div>
 
       <br>
       <div class="form-group">
         <label class="texto-form" for="relacion">Relación con el proyecto</label>
         <textarea class="form-control" id="relacion" rows="3" formControlName="relacion" placeholder="Escribe la relación con el proyecto"  maxlength="150"></textarea>
-        <small *ngIf="!crear &&formOrden.get('relacion').hasError('required')" class="alerta">No puede estar vacio. </small> 
+        <small *ngIf="!crear &&formOrden.get('relacion').hasError('required')" class="alerta">No puede estar vacio. </small>
       </div>
 
       <br>
       <div class="form-group">
         <label class="texto-form" for="observaciones">Observaciones a la hora de pagar al acreedor</label>
         <textarea class="form-control" id="observaciones" rows="3" formControlName="observaciones" placeholder="Escribe las observaciones que creas correspondientes"  maxlength="150"></textarea>
-        <small *ngIf="!crear &&formOrden.get('observaciones').hasError('required')" class="alerta">No puede estar vacio. </small> 
+        <small *ngIf="!crear &&formOrden.get('observaciones').hasError('required')" class="alerta">No puede estar vacio. </small>
       </div>
       <br>
       <!-- <a href="#"><img src="../../../../../assets/iconos/pdf.png" alt="Descargar orden pdf" width="80px"></a>-->
