--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -147,7 +147,7 @@
               <td>{{pendientesM[getOrdenPagindoIndex(a,   paginaActualPM)].concepto}}</td>
               <td>{{pendientesM[getOrdenPagindoIndex(a,   paginaActualPM)].acronimo}}</td>
               <td>
-                  <img src="assets/iconos/lupa.png" class="rounded ml-0 icon" alt="Editar Orden" maxwidth="10px" [routerLink]="['/vistaOrdenes/verOrden/', pendientesM[getOrdenPagindoIndex(i, paginaActualPM)].id]">
+                  <img src="assets/iconos/lupa.png" class="rounded ml-0 icon" alt="Editar Orden" maxwidth="10px" [routerLink]="['/editarOrden/', pendientesM[getOrdenPagindoIndex(i, paginaActualPM)].id]">
               </td>
           </tr>
           <tr><!--Los botones llaman a las funciones anterior y siguiente y actualizan a la pagina correspondiente-->
