--- a/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.html
+++ b/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.html
@@ -76,8 +76,10 @@
                   <td>{{ordenes[getOrdenPagindoIndex(i, paginaActual)].concepto}}</td>
 
                   <td>
-                      <img src="assets/iconos/lupa.png" class="rounded ml-0 icon" alt="Editar Orden" maxwidth="10px" [routerLink]="['/vistaOrdenes/verOrden/', ordenes[getOrdenPagindoIndex(i, paginaActual)].id]">
-                  </td>
+                      <img *ngIf="ordenes[getOrdenPagindoIndex(i, paginaActual)].estado !='PM'" src="assets/iconos/lupa.png" class="rounded icon" alt="Editar Orden" [routerLink]="['/vistaOrdenes/verOrden/', ordenes[getOrdenPagindoIndex(i,   paginaActual)].id]" >
+                      
+                      <img *ngIf="ordenes[getOrdenPagindoIndex(i, paginaActual)].estado =='PM'" src="assets/iconos/lupa.png" class="rounded icon" alt="Editar Orden" [routerLink]="['/editarOrden/', ordenes[getOrdenPagindoIndex(i, paginaActual)].id]" >
+                    </td>
             </tr>
             <tr><!--Los botones llaman a las funciones anterior y siguiente y actualizan a la pagina correspondiente-->
               <button type="button" class="btn btn-link mr-2" (click) ="paginaActual= anterior(paginaActual, ordenes.length, 0)">
