--- a/src/app/components/vista-ordenes/ver-orden/ver-orden.component.html
+++ b/src/app/components/vista-ordenes/ver-orden/ver-orden.component.html
@@ -107,7 +107,6 @@
           <td>{{gasto.importe}}</td>
           <td>
             <img src="assets/iconos/lupa.png" class="rounded icon" alt="ver foto"  (click)='verFoto(gasto.foto)'>
-
           </td>
         </tr>
       </tbody>
@@ -136,7 +135,7 @@
               <td colspan="4">{{orden.memoria}} </td>
           </tr>
         <tr>
-            <th scope="col">Itinerario:</th>
+          <th scope="col">Itinerario:</th>
           <td>{{gastoViaje.itinerario}}</td><!--Cambiar por gastoViaje-->
           <th scope="col">Fecha ida:</th>
           <td>{{gastoViaje.fechaIda}}</td> <!--Cambiar por gastoViaje-->
@@ -153,6 +152,7 @@
           <tr class="table-secondary">
             <th class="text-center" scope="col" colspan="5">Justificación de Gastos</th>
             <th class="text-center" scope="col">Importe</th>
+            <th class="text-center" scope="col">Imagen</th>
           </tr>
         </thead>
 
@@ -161,33 +161,54 @@
             <th class="text-center" rowspan="6">Transporte</th>
             <th colspan="4">Avion</th>
             <td class="text-center">{{gastoViaje.importeAvion}}</td>
+            <td class="text-center">
+                <img src="assets/iconos/lupa.png" class="rounded icon" alt="ver foto"  (click)='verFotoViaje(gastoViaje.fotoAvion)'>
+            </td>
           </tr>
           <tr>
             <th >Coche</th>
             <th class="text-right" colspan="2">Numero de KM</th>
             <td>{{gastoViaje.nkilometros}}</td>
             <td class="text-center">{{gastoViaje.importeCoche}}</td>
+            <td class="text-center">
+                <img src="assets/iconos/lupa.png" class="rounded icon" alt="ver foto"  (click)='verFotoViaje(gastoViaje.fotoCoche)'>
+            </td>
           </tr>
           <tr>
             <th colspan="4">Tren</th>
             <td class="text-center">{{gastoViaje.importeTren}}</td>
+            <td class="text-center">
+                <img src="assets/iconos/lupa.png" class="rounded icon" alt="ver foto"  (click)='verFotoViaje(gastoViaje.fotoTren)'>
+            </td>
           </tr>
           <tr>
             <th colspan="4">Autobus</th>
             <td class="text-center">{{gastoViaje.importeAutobus}}</td>
+            <td class="text-center">
+                <img src="assets/iconos/lupa.png" class="rounded icon" alt="ver foto"  (click)='verFotoViaje(gastoViaje.fotoAutobus)'>
+            </td>
           </tr>
           <tr>
             <th colspan="4">Taxi</th>
             <td class="text-center">{{gastoViaje.importeTaxi}}</td>
+            <td class="text-center">
+                <img src="assets/iconos/lupa.png" class="rounded icon" alt="ver foto"  (click)='verFotoViaje(gastoViaje.fotoTaxi)'>
+            </td>
           </tr>
           <tr>
             <th colspan="4">Otros</th>
             <td class="text-center">{{gastoViaje.importeOtros}}</td>
+            <td class="text-center">
+                <img src="assets/iconos/lupa.png" class="rounded icon" alt="ver foto"  (click)='verFotoViaje(gastoViaje.fotoOtros)'>
+            </td>
           </tr>
           <tr>
             <th class="text-center">Alojamiento</th>
             <th colspan="4">Factura Hotel</th>
             <td class="text-center">{{gastoViaje.importeHotel}}</td>
+            <td class="text-center">
+                <img src="assets/iconos/lupa.png" class="rounded icon" alt="ver foto"  (click)='verFotoViaje(gastoViaje.fotoHotel)'>
+            </td>
           </tr>
           <tr>
             <th class="text-center">Manutencion</th>
@@ -196,15 +217,51 @@
             <th class="text-right">Precio de dieta (€/Dia)</th>
             <td>{{gastoViaje.precioDieta}}</td>
             <td class="text-center">{{gastoViaje.importeDietas}}</td>
+            <td class="text-center">No es necesaria imagen</td>
           </tr>
+          <tr>
+            <th class="text-center">Otros gastos</th>
+            <th colspan="4">Inscripciones a congresos, seminarios, reuniones</th>
+            <td class="text-center">{{gastoViaje.importeOtrosGastos}}</td>
+            <td class="text-center">
+                <img src="assets/iconos/lupa.png" class="rounded icon" alt="ver foto"  (click)='verFotoViaje(gastoViaje.fotoOtrosGastos)'>
+            </td>
+          </tr>
+
+          
+          
           <tr class="table-secondary">
-            <th class="text-right" colspan="5">TOTAL GASTOS:</th>
+            <th class="text-right" colspan="6">TOTAL GASTOS:</th>
             <td class="text-center">{{gastoViaje.importeTotal}}</td>
           </tr>
+
+          <tr>
+              <td class="text-right" rowspan="2" colspan="4">Si ha utilizado los servicios de la agencia de viajes
+                  concertada, indique para qué tipo de gastos:
+              </td>
+              <td class="text-center" colspan="2">
+                <input class="form-check-input" type="checkbox" value="{{gastoViaje.checkAgenciaAvion}}"  disabled> Avion 
+              </td>
+              <td class="text-center" >  
+                <input class="form-check-input" type="checkbox" value="{{gastoViaje.checkAgenciaTren}}" disabled> Tren
+              </td>
+      
+          </tr>
+          <tr>
+              <td class="text-center" colspan="2">
+                  <input class="form-check-input" type="checkbox" value="{{gastoViaje.checkAgenciaAlojamiento}}" disabled>Hotel 
+              </td>
+
+              <td class="text-center" >  
+                  <span> Otros: {{gastoViaje.otrosAgencia}} </span>
+              </td>
+          
+          </tr>
+
         </tbody>
       </table>
     </div>
-
+   
 
   <div *ngIf="isG" class="col-md-12">
     <table class="table table-bordered text-center">
