--- a/src/app/components/vista-ordenes/editar-orden/editar-orden.component.html
+++ b/src/app/components/vista-ordenes/editar-orden/editar-orden.component.html
@@ -117,6 +117,7 @@
         </table>
       </div>
 
+<!--GASTOS VIAJE-->
       <div class="row">
         <div class="form-group form-inline espacioIzq2"  *ngIf="isV">
           <div>
@@ -171,15 +172,20 @@
         <div class="form-row form-inline bordeDiv">
           <div class="form-group col-md-6 fechaDer">
             <label for="fechaIda"><b>Fecha ida:&nbsp;&nbsp;&nbsp;&nbsp;</b></label>
-            <input type="date" class="form-control" formControlName="fechaIda" id="fechaIda" placeholder="Fecha ida" name="fechaIda">
+            <input type="date" class="form-control" formControlName="fechaIda" id="fechaIda" value="{{gastoViaje.fechaIda}}" name="fechaIda">
           </div>
 
           <div class="form-group col-md-6">
             <label for="fechaVuelta"><b>Fecha vuelta:&nbsp;&nbsp;&nbsp;&nbsp;</b></label>
-            <input type="date" class="form-control" formControlName="fechaVuelta" id="fechaVuelta" placeholder="Fecha vuelta" name="fechaVuelta">
+            <input type="date" class="form-control" formControlName="fechaVuelta" id="fechaVuelta" value="{{gastoViaje.fechaVuelta}}" name="fechaVuelta">
             <div class="alerta">
               <!--<small *ngIf="!formValid && gastoViaje.fechaIda > gastoViaje.fechaVuelta">Las fechas introducidas no son válidas <br></small>-->
             </div>
+          </div>
+
+          <div class="form-group itinerario">
+            <label class ="tx-secondary mr-2" for="itinerario"><b>Itinerario:</b></label>
+            <input type="text" class="form-control" formControlName="itinerario" placeholder="{{gastoViaje.itinerario}}" maxlength="150" id="itinerario" name="itinerario">
           </div>
         </div>
         <br>
@@ -200,11 +206,8 @@
         <div class="form-group bordeTransporte" [hidden]="!checkAvion">
           <div class="row">
               <div class="col-md-10">
-                <label class ="tx-secondary" for="avion"><b>Avion</b></label>
-                <input type="text" class="form-control" formControlName="avion" placeholder="{{gastoViaje.avion}}" maxlength="200" id="avion" name="avion">
-                <div class="alerta">
-                  <small *ngIf="false">No puede estar vacio <br></small>
-                </div>
+                <br><br>
+                <label class ="tx-secondary"><b>Avion</b></label>
               </div>
 
               <div class="col-md-2">
@@ -220,9 +223,8 @@
             <label for="imagen">Adjuntar Factura</label>
             <input (change)="seleccionarFoto($event, 'avion')" type="file" class="form-control-file" id="fotoAvion">
           </div>
-          <br>
         </div>
-
+        <br>
 
         <!--Checkbox coche-->
         <div class="form-check">
@@ -247,7 +249,7 @@
 
               <div class="col-md-4">
                 <label for="preciokm">€/km</label>
-                <input type="number" class="form-control" placeholder="{{precioKilometro}}" name="preciokm" id="preciokm" disabled>
+                <input type="number" class="form-control" placeholder="{{gastoViaje.precioKilometro}}" name="preciokm" id="preciokm" disabled>
                 <div class="alerta">
                   <small *ngIf="false">No puede estar vacio <br></small>
                 </div>
@@ -284,15 +286,12 @@
         <div class="form-group bordeTransporte" [hidden]="!checkTren">
           <div class="row">
               <div class="col-md-10">
+                <br><br>
                 <label class ="tx-secondary" for="tren"><b>Tren</b></label>
-                <input type="text" class="form-control" formControlName="tren" placeholder="{{gastoViaje.tren}}" maxlength="200" id="tren" name="tren">
-                <div class="alerta">
-                  <small *ngIf="false">No puede estar vacio <br></small>
-                </div>
               </div>
 
               <div class="col-md-2">
-                <label for="importeTren">Importe</label>
+                <label for="importeAvion">Importe</label>
                 <input type="number" class="form-control" formControlName="importeTren" required min="0" value="{{gastoViaje.importeTren}}" step="any" name="importeTren" id="importeTren" (change)="calculoImporteTotal('tren')" onFocus="if (this.value==0) this.value='';">
                 <div class="alerta">
                   <small *ngIf="false">No puede estar vacio <br></small>
@@ -307,6 +306,7 @@
           <br>
         </div>
 
+
         <!--Checkbox autobus-->
         <div class="form-check">
           <input class="form-check-input ml-1" type="checkbox" value="" id="checkAutobus" (change)="capturarValorCheck('autobus')">
@@ -315,19 +315,17 @@
             Autobús
           </label>
         </div>
-        <!--Autobus-->
+
+        <!--Autous-->
         <div class="form-group bordeTransporte" [hidden]="!checkAutobus">
           <div class="row">
               <div class="col-md-10">
+                <br><br>
                 <label class ="tx-secondary" for="autobus"><b>Autobus</b></label>
-                <input type="text" class="form-control" formControlName="autobus" placeholder="{{gastoViaje.autobus}}" maxlength="200" id="autobus" name="autobus">
-                <div class="alerta">
-                  <small *ngIf="false">No puede estar vacio <br></small>
-                </div>
               </div>
 
               <div class="col-md-2">
-                <label for="importeAutobus">Importe</label>
+                <label for="importeAvion">Importe</label>
                 <input type="number" class="form-control" formControlName="importeAutobus" required min="0" value="{{gastoViaje.importeAutobus}}" step="any" name="importeAutobus" id="importeAutobus" onFocus="if (this.value==0) this.value='';" (change)="calculoImporteTotal('autobus')">
                 <div class="alerta">
                   <small *ngIf="false">No puede estar vacio <br></small>
@@ -356,15 +354,12 @@
         <div class="form-group bordeTransporte" [hidden]="!checkTaxi">
           <div class="row">
               <div class="col-md-10">
+                <br><br>
                 <label class ="tx-secondary" for="taxi"><b>Taxi</b></label>
-                <input type="text" class="form-control" formControlName="taxi" placeholder="{{gastoViaje.taxi}}" maxlength="200" id="taxi" name="taxi">
-                <div class="alerta">
-                  <small *ngIf="false">No puede estar vacio <br></small>
-                </div>
               </div>
 
               <div class="col-md-2">
-                <label for="importeTaxi">Importe</label>
+                <label for="importeAvion">Importe</label>
                 <input type="number" class="form-control" formControlName="importeTaxi" required min="0" value="{{gastoViaje.importeTaxi}}" step="any" name="importeTaxi" id="importeTaxi" onFocus="if (this.value==0) this.value='';" (change)="calculoImporteTotal('taxi')">
                 <div class="alerta">
                   <small *ngIf="false">No puede estar vacio <br></small>
@@ -378,6 +373,7 @@
           </div>
           <br>
         </div>
+
 
         <!--Checkbox otros-->
         <div class="form-check">
@@ -425,7 +421,7 @@
 
               <div class="col-md-2">
                 <label for="importeHotel">Importe</label>
-                <input type="number" class="form-control" formControlName="importeHotel" required min="0" value="0" step="any" name="importeHotel" id="importeHotel" onFocus="if (this.value==0) this.value='';" (change)="calculoImporteTotal('hotel')">
+                <input type="number" class="form-control" formControlName="importeHotel" required min="0" value="{{gastoViaje.importeHotel}}" step="any" name="importeHotel" id="importeHotel" onFocus="if (this.value==0) this.value='';" (change)="calculoImporteTotal('hotel')">
                 <div class="alerta">
                   <small *ngIf="false">No puede estar vacio <br></small>
                 </div>
@@ -444,7 +440,7 @@
           <div class="row">
               <div class="col-md-3">
                 <label for="nDietas">Nº de dietas</label>
-                <input type="number" class="form-control" formControlName="nDietas" required min="0" value="0" step="any" name="nDietas" id="nDietas" onFocus="if (this.value==0) this.value='';" (change)="calculoImporteDietas()">
+                <input type="number" class="form-control" formControlName="nDietas" required min="0" value="{{gastoViaje.nDietas}}" step="any" name="nDietas" id="nDietas" onFocus="if (this.value==0) this.value='';" (change)="calculoImporteDietas()">
                 <div class="alerta">
                   <small *ngIf="false">No puede estar vacio <br></small>
                 </div>
@@ -452,7 +448,7 @@
 
               <div class="col-md-7">
                 <label for="precioDieta">cuantía por dieta(€/día) <a href="https://www.ucm.es/data/cont/docs/32-2018-07-11-20180711_cuadro_dietas.pdf" target="_blank">[Ver cuadro de dietas]</a></label>
-                <input type="number" class="form-control" formControlName="precioDieta" required min="0" value="0" step="any" name="precioDieta" id="precioDieta" onFocus="if (this.value==0) this.value='';" (change)="calculoImporteDietas()">
+                <input type="number" class="form-control" formControlName="precioDieta" required min="0" value="{{gastoViaje.precioDieta}}" step="any" name="precioDieta" id="precioDieta" onFocus="if (this.value==0) this.value='';" (change)="calculoImporteDietas()">
                 <div class="alerta">
                   <small *ngIf="false">No puede estar vacio <br></small>
                 </div>
@@ -460,7 +456,7 @@
 
               <div class="col-md-2">
                 <label for="importeDietas">Importe</label>
-                <input type="number" class="form-control" formControlName="importeDietas" required min="0" value="0" step="any" name="importeDietas" id="importeDietas" disabled>
+                <input type="number" class="form-control" formControlName="importeDietas" required min="0" value="{{gastoViaje.importeDietas}}" step="any" name="importeDietas" id="importeDietas" disabled>
                 <div class="alerta">
                   <small *ngIf="false">No puede estar vacio <br></small>
                 </div>
@@ -479,7 +475,7 @@
 
               <div class="col-md-2">
                 <label for="importeOtrosGastos">Importe</label>
-                <input type="number" class="form-control" formControlName="importeOtrosGastos" required min="0" value="0" step="any" name="importeOtrosGastos" id="importeOtrosGastos" onFocus="if (this.value==0) this.value='';" (change)="calculoImporteTotal('otrosgastos')">
+                <input type="number" class="form-control" formControlName="importeOtrosGastos" required min="0" value="{{gastoViaje.importeOtrosGastos}}" step="any" name="importeOtrosGastos" id="importeOtrosGastos" onFocus="if (this.value==0) this.value='';" (change)="calculoImporteTotal('otrosgastos')">
                 <div class="alerta">
                   <small *ngIf="false">No puede estar vacio <br></small>
                 </div>
